--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         Hello World
     </h1>
 
-    <button type="button" id="btn">Click me</button>
+    <button type="button" id="btn">Connect to socket </button>
 
-    <button id="connectionBtn">Fetch connection id</button>
+    <button id="connectionBtn">Fetch socket connection id</button>
 
     <div id="connectionResponse">
 
@@ -25,7 +25,7 @@
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script>
 
-        const socket = io('http://localhost:3000');
+        const socket = io('http://localhost:4004');
         const userId = "312";
 
         document.addEventListener('DOMContentLoaded', () => {
