--- a/index.html
+++ b/index.html
@@ -1,63 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>
-        Hello World
-    </h1>
-
-    <button type="button" id="btn">Connect to socket </button>
-
-    <button id="connectionBtn">Fetch socket connection id</button>
-
-    <div id="connectionResponse">
-
-    </div>
-
-    <div id="submissionResponse">
-
-    </div>
-
-    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-    <script>
-
-        const socket = io('http://localhost:4004');
-        const userId = "312";
-
-        document.addEventListener('DOMContentLoaded', () => {
-            socket.on('connect', () => {
-                console.log('Connected to server');
-            });
-
-            document.getElementById('btn').addEventListener('click', () => {
-                console.log("Emitting set user id");
-                socket.emit('setUserId', userId);
-            });
-
-            document.getElementById('connectionBtn').addEventListener('click', () => {
-                console.log("Emitting get connection id");
-                socket.emit('getConnectionId', userId);
-            });
-
-            socket.on('connectionId', (data) => {
-                document.getElementById('connectionResponse').textContent = data;
-            });
-
-            socket.on("submissionPayloadResponse", (data) => {
-                document.getElementById('submissionResponse').textContent = JSON.stringify(data);
-            })
-
-        
-            socket.on('disconnect', () => {
-                console.log('Disconnected from server');
-            });
-        });
-        
-
-    </script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
